@@ -5,11 +5,20 @@ find-links = http://download.zope.org/distribution/
 
 [test]
 recipe = zc.recipe.testrunner
+environment = test-environment
 eggs =
    z3c.pt
 
+[test-environment]
+Z3C_PT_DEBUG = False
+
 [benchmark]
 recipe = zc.recipe.testrunner
+environment = benchmark-environment
 eggs =
    z3c.pt
    benchmark
+
+[benchmark-environment]
+Z3C_PT_DEBUG = False
+Z3C_PT_FILECACHE = ${buildout:directory}/cache
